--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,48 +1,48 @@
-{
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "DotNetAutoAttach",
-            "request": "launch",
-            "name": ".NET Core Watch: GraphNotificationsSample",
-            "args": [],
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "project": "GraphNotificationsSample"
-        },
-        {
-            "type": "DotNetAutoAttach",
-            "request": "launch",
-            "name": ".NET Core Watch: NarwhalFacts",
-            "args": [],
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "project": "NarwhalFacts"
-        },
-        {
-            "type": "DotNetAutoAttach",
-            "request": "launch",
-            "name": ".NET Core Watch: GraphNotificationsUsingUnsId",
-            "args": [],
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "project": "GraphNotificationsUsingUnsId"
-        },
-        {
-            "type": "DotNetAutoAttach",
-            "request": "launch",
-            "name": ".NET Core Watch: Microsoft.Graph.Notifications.WebSample",
-            "args": [],
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "project": "Microsoft.Graph.Notifications.WebSample"
-        }
-    ]
-}
+
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations":
+    {
+      "type": "DotNetAutoAttach",
+      "request": "launch",
+      "name": ".NET Core Watch: GraphNotificationsSample",
+      "args": [],
+      "env": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "project": "GraphNotificationsSample"
+    },
+    {
+      "type": "DotNetAutoAttach",
+      "request": "launch",
+      "name": ".NET Core Watch: NarwhalFacts",
+      "args": [],
+      "env": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "project": "NarwhalFacts"
+    },
+    {
+      "type": "DotNetAutoAttach",
+      "request": "launch",
+      "name": ".NET Core Watch: GraphNotificationsUsingUnsId",
+      "args": [],
+      "env": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "project": "GraphNotificationsUsingUnsId"
+    },
+    {
+      "type": "DotNetAutoAttach",
+      "request": "launch",
+      "name": ".NET Core Watch: Microsoft.Graph.Notifications.WebSample",
+      "args": [],
+      "env": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "project": "Microsoft.Graph.Notifications.WebSample"
+    }
+
+
